Supress static suggestion

--- a/.editorconfig
+++ b/.editorconfig
@@ -137,3 +137,6 @@ csharp_style_prefer_index_operator = true:suggestion
 csharp_style_prefer_range_operator = true:suggestion
 dotnet_style_prefer_conditional_expression_over_assignment = true:suggestion
 dotnet_style_prefer_conditional_expression_over_return = true:suggestion
+
+## Repo specific
+dotnet_diagnostic.CA1822.severity = none
