Update default language

--- a/UnityExtension/UnityExtension.csproj
+++ b/UnityExtension/UnityExtension.csproj
@@ -75,5 +75,6 @@
     <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
     <GenerateTestArtifacts>True</GenerateTestArtifacts>
+    <DefaultLanguage>en-us</DefaultLanguage>
   </PropertyGroup>
 </Project>
